--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: python
 python:
   - "3.12"
 
+# trigger Travis build
+
 install:
   - pip install --upgrade pip
   - pip install -r requirements.txt
