Fix missing dev dependencies for Travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,34 +2,30 @@ language: python
 python:
   - "3.12"
 
-# trigger Travis build
-
 install:
   - pip install --upgrade pip
   - pip install -r requirements.txt
-
-env:
-  global:
-    - EB_REGION=us-east-2
-    - EB_APP=swe1-app
-    - EB_ENV=Swe1-app-env
-    - EB_S3_BUCKET=elasticbeanstalk-us-east-2-248189932188
+  - pip install black flake8 coverage  # 👈 add this line
 
 script:
   - black --check .
   - flake8 .
   - coverage run manage.py test
 
-after_success:
-  - coveralls
-
 deploy:
   provider: elasticbeanstalk
-  region: $EB_REGION
-  app: $EB_APP
-  env: $EB_ENV
-  bucket_name: $EB_S3_BUCKET
   access_key_id: $AWS_ACCESS_KEY_ID
   secret_access_key: $AWS_SECRET_ACCESS_KEY
+  region: "us-east-2"
+  app: "swe1-app"
+  env: "swe1-app-env"
+  bucket_name: "elasticbeanstalk-us-east-2-248189932188"
   on:
     branch: main
+
+env:
+  global:
+    - EB_REGION=us-east-2
+    - EB_APP=swe1-app
+    - EB_ENV=swe1-app-env
+    - EB_S3_BUCKET=elasticbeanstalk-us-east-2-248189932188
